[project]
name = "blackprint-engine"
version = "0.8.13"
description = "Blackprint engine for registering node/interface and run exported Blackprint on Python environment"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/Blackprint/engine-python"
"Bug Tracker" = "https://github.com/Blackprint/engine-python/issues"